--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FlashcardsApp</string>
+    <!-- Text shown on button which will register a user -->
+    <string name="register_register_button">Register</string>
 </resources>
