Add crude login funct, connect login / register / welcome | #11 #8  #38
Background:

Currently, only registration is possible in the app, with no ability to login or out once authenticated / unauthenticated.

Changes:

Add a crude implementation to `LoginScreen` to allow the user to login to their existing account, or to click to register a new account.

Add a button to `RegisterScreen` to allow the user to log out of an existing account.

Testing:

Open app. Attempt to login to an existing account correctly / incorrect, register a new account, log out.

Closes #11, #8, #38

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,16 @@
 <resources>
     <string name="app_name">FlashcardsApp</string>
+
+    <!-- Text shown on button which a user clicks on if they forgot their password -->
+    <string name="login_forgot_password_button">Forgot Password?</string>
+    <!-- Text shown on button which will prompt a user to login with their credentials -->
+    <string name="login_login_button">Login</string>
+    <!-- Text shown on button which will prompt a user to begin registration -->
+    <string name="login_register_button">Register</string>
+
     <!-- Text shown on button which will register a user -->
     <string name="register_register_button">Register</string>
+
+    <!-- Text shown on button which will logout an authenticated user -->
+    <string name="welcome_logout_button">Logout</string>
 </resources>
