feat: Crude username in registration impl | #32
feat: Crude username in registration impl | #32

Background:

During registration, we currently only retrieve e-mail and password - the minimum necessary information to register account. This commit adds a new field that must be completed during registration: username - and welcomes the user by their username in the welcome screen.

Changes:
* Update models of `RegisterScreen` & `WelcomeScreen` to include use of username.
* Update `AuthRepository` to require a username in the sign-up method.
* Do some minor clean-up.

Testing:

Open the application. When registering, you should now see a username field. When registered, and when you login, you should now see "Welcome 'username'". If the account does not have a username, it should just say unknown.

Closes #32

10 has also been closed for some time, and this is related to that so - Closes #10

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,10 @@
 
     <!-- Text shown on button which will logout an authenticated user -->
     <string name="welcome_logout_button">Logout</string>
+    <!-- Text shown when a user has logged in to welcome them by their username -->
+    <string name="welcome_message_username">Welcome %s</string>
+    <!-- Text shown when unable to correctly fetch a username for this user -->
+    <string name="welcome_error_username">Unknown</string>
 
     <!-- Text shown on header prompting user to enter their email to reset password -->
     <string name="forgot_pass_prompt">
