style: Polish welcome, register, login UI | #47 #33
* Added canvas background to all 3 screens
* Added card on welcome screen

style: polish UI of register and login screens | #47 #33

* Implemented better canvas background with drawPath for login and register screens

style: polish UI of register and login screens | #47 #33

* Refactored PasswordTextField
* Added rudimentary canvas behind login and register screens

style: polish UI of register and login screens | #47 #33

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,23 @@
     </string>
     <!-- Text shown on button which will return user back to the Login screen -->
     <string name="forgot_pass_return_button">Return</string>
+
+    <!-- Text to show example email within textfield -->
+    <string name="general_placeholder_email_text">example@email.com</string>
+
+    <!-- Email label for email textfields -->
+    <string name="general_email_label">Email</string>
+
+    <!-- Email label for username textfields -->
+    <string name="general_username_label">Username</string>
+
+    <!-- Password label for username textfields -->
+    <string name="general_password_label">Password</string>
+
+    <!-- Placeholder string for content descriptions -->
+    <string name="content_description_placeholder">Content description</string>
+
+
+    <!-- Content description for password visbility toggle -->
+    <string name="password_visibility_description">Toggle password</string>
 </resources>
