style: Update login & welcome screen UI | #33 #48
style: Update login & welcome screen UI | #33 #48

* Continue Joe's work to touch-up the login & welcome screens explicitly.
* Add function to the password hide/show implementation.
* Change colors slightly to a blue, though still placeholder.
* Encapsulate the column screen background stuff as a `ScreenBackground` composable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">FlashcardsApp</string>
+    <string name="app_name">Dodo</string>
+    <string name="app_name_subtext">a study tool… for dodos</string>
 
     <!-- Text shown on button which a user clicks on if they forgot their password -->
     <string name="login_forgot_password_button">Forgot Password?</string>
@@ -12,6 +13,7 @@
     <string name="register_register_button">Register</string>
 
     <!-- Text shown on button which will logout an authenticated user -->
+    <string name="welcome_edit_profile_button">Edit Profile</string>
     <string name="welcome_logout_button">Logout</string>
     <!-- Text shown when a user has logged in to welcome them by their username -->
     <string name="welcome_message_username">Welcome %s</string>
